# complicidad2020

./: .gitignore  Dockerfile  Makefile  README.md  fly.toml  manage.py  pyproject.toml  tox.ini
.github/workflows/: main.yml
complicidad/: asgi.py  settings.py  urls.py  wsgi.py
redirector/: admin.py  models.py  urls.py  utils.py  views.py
redirector/migrations/: 0001_initial.py  0002_marketing_created_at.py
tests/unit/: test_redirector.py  test_utils.py
website/: admin.py  models.py  urls.py  views.py
website/migrations/: 0001_initial.py
website/templates/website/: base.html  comprar.html  contactanos.html  home.html  poem_detail.html  poem_list.html  poemas-y-frases.html  sobre-la-autora.html
