[tool.poetry]
name = "complicidad"
version = "0.1.0"
description = "Redirector to Amazon's Complicidad"
authors = ["edilio <edilio@gallardo.solutions>"]

[tool.poetry.dependencies]
python = "^3.10.5"
Django = "^4.0.6"
django-countries = "^7.3.2"
ip3country = "^0.1.0"
str2bool = "^1.1"
whitenoise = "^6.2.0"
django-health-check = "^3.16.5"
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.1"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
pytest-dotenv = "^0.5.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
